--- a/ctf/devserver/index.html
+++ b/ctf/devserver/index.html
@@ -36,7 +36,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<h2>Outgoing Webhook</h2>
-						<p>A classic WebHook debugger triggering our entrypoint SSRF</p>
+						<p>A classic WebHook debugger. Totally immune to SSRFs of course</p>
 					</header>
 					<div class="flex flex-1" style="width:100%;">
 						<article style="width:100%;">
