--- a/ctf/devserver/index.html
+++ b/ctf/devserver/index.html
@@ -3,6 +3,11 @@
 	Theory by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+
+
+	TO DO: Move the Development server to our bulletproof
+				 AWS Account with ID 238989005120 when ready to go to production.
+				 Note that a precious Flag has already been moved there...
 -->
 <html>
 	<head>
