--- a/ctf/webserver/frontend/index.html
+++ b/ctf/webserver/frontend/index.html
@@ -32,7 +32,7 @@
 						<hr />
 						<span class="icon fa-rocket major"></span>
 						<h2>Outgoing Webhook</h2>
-						<p>Since we are so <strong>BIG</strong> and <strong>POPULAR</strong>, we have a new WebHook feature!</p>
+						<p><strong>Infinity Corp</strong> has a new WebHook feature!</p>
             <p>We will send updates to your app whenever an event happens. You can test your Webhook handler here; The response will appear below.</p>
             <form id="hook" action="/backend/">
               <p>
