--- a/ctf/devserver/index.html
+++ b/ctf/devserver/index.html
@@ -3,11 +3,6 @@
 	Theory by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-
-
-	TO DO: Move the Development server to our bulletproof
-				 AWS Account with ID 238989005120 when ready to go to production.
-				 Note that a precious Flag has already been moved there...
 -->
 <html>
 	<head>
@@ -24,7 +19,7 @@
 					<a href="https://hackfest.ca/" class="logo">Website under construction</a>
 					<nav id="nav">
 						<a href="index.html">Project Inifity</a>
-						<a href="https://github.com/m6a-UdS/hf-ctf">GitHub</a>
+						<a href="https://github.com/hackfestca/ssrf">GitHub</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
